--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="hello">Hello World, BrowserActivity!</string>
     <string name="app_name">Default Browser</string>
+    <string name="http_browser">HTTP Protocol</string>
+    <string name="http_browser_mime">HTTP Protocol w/ mime-type</string>
 </resources>
