Renamed project to Browser Selector

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello World, BrowserActivity!</string>
-    <string name="app_name">Default Browser</string>
+    <string name="app_name">Browser Selector</string>
     <string name="http_browser">HTTP(S) Protocol</string>
     <string name="http_browser_mime">HTTP(S) Protocol w/ mime-type</string>
     <string name="always_ask">Always Ask</string>
